<resources>
    <string name="app_name">OnlineStore</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Categories</string>
    <string name="events">Events</string>
    <string name="latest">Latest</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="mgs_login_create">Do not have an account ? Swipe left to</string>
    <string name="msg_login_create_account_text">create a new account.</string>
    <string name="full_name">FULL NAME</string>
    <string name="register">Register</string>
    <string name="our_policy_and_term">our Policy and Term.</string>
    <string name="by_create_account_you_agree_with">By create account you agree with</string>
    <string name="login_register">Login/Register</string>
    <string name="logout">Logout</string>
    <string name="simple_email">User@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="phone_number">Phone number</string>
    <string name="setting">Setting</string>
    <string name="store">Store</string>
    <string name="contact">Contact</string>
    <string name="product">Product</string>
    <string name="about_onlinestore">About OnlineStore</string>
    <string name="feedback">Feedback</string>
    <string name="change_password">Change Password</string>
    <string name="shops">Shops</string>
    <string name="popular_product">Popular Product</string>
    <string name="promotion">Promotion</string>
    <string name="become_one_of_our_seller_for_free">Become one of our seller for free!</string>
    <string name="by_click_create_account">By click create account !</string>
    <string name="back">back</string>
    <string name="title_activity_store">StoreActivity</string>


    <string name="tab_home">Home</string>
    <string name="tab_product">Product</string>
    <string name="tab_contact">Contact</string>
    <string name="discount">Discount (%)</string>
    <string name="description">Description</string>
    <string name="choose_categories">Choose categories</string>
    <string name="tags">Tags</string>
    <string name="enter_tag">Enter tag</string>

    <string name="title_activity_product_info">ProductInfoActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="info">Info</string>
    <string name="review">Review</string>
    <string name="this_feature_is_not_available_yet">This feature is not available yet!</string>
    <string name="related_product">Related Product</string>
    <string name="msg_item_not_found">Oop! Item not found!</string>
    <string name="address">Address</string>
    <string name="contact_seller">Contact seller</string>
    <string name="no_product">No Product</string>

</resources>
