<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductInfoActivity">

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/api_iv_back"
                android:layout_weight="1"
                android:contentDescription="@string/back"
                android:padding="13dp"
                android:src="@drawable/ic_arrow_back"
                android:layout_width="0dp"
                android:layout_height="50dp"/>
            <LinearLayout
                android:gravity="center"
                android:layout_weight="5"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/api_tv_title"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/api_tv_price"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/api_iv_search"
                android:layout_weight="1"
                android:contentDescription="@string/back"
                android:padding="17dp"
                android:src="@drawable/ic_search"
                android:layout_width="0dp"
                android:layout_height="50dp"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/api_vp_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>
           <com.google.android.material.tabs.TabLayout
               android:layout_alignParentBottom="true"
               app:tabBackground="@drawable/tab_selected"
               app:tabGravity="center"
               app:tabIndicatorHeight="0dp"
               android:id="@+id/api_tab_indicator"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>
        </RelativeLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/api_tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/api_cg_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/api_cg_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/contact_seller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/api_iv_store_profile"
                    android:padding="15dp"
                    android:src="@drawable/ic_home"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:id="@+id/api_tv_store_name"
                    android:gravity="center_vertical"
                    android:text="@string/store"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:padding="15dp"
                    android:src="@drawable/ic_call"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:id="@+id/api_tv_store_phone"
                    android:gravity="center_vertical"
                    android:text="@string/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:tint="@color/colorPrimaryDark"
                    android:padding="15dp"
                    android:src="@drawable/ic_location"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:id="@+id/api_tv_store_address"
                    android:gravity="center_vertical"
                    android:text="@string/address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/related_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/api_rc_related_product"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</ScrollView>