<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="40dp"
    android:orientation="vertical"
    tools:context=".ui.login.LoginFragment">
    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="25sp"
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginStart="25dp"
            android:layout_marginEnd="0dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <ImageView
                    android:contentDescription="@string/email"
                    android:padding="15dp"
                    android:src="@drawable/ic_mail"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:hint="@string/email"
                    android:layout_height="wrap_content">
                    <EditText
                        android:text=""
                        android:background=""
                        android:inputType="textEmailAddress"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <ImageView
                    android:contentDescription="@string/password"
                    android:padding="15dp"
                    android:src="@drawable/ic_password"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:hint="@string/password"
                    android:layout_height="wrap_content">
                    <EditText
                        android:background=""
                        android:padding="5dp"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_style"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/mgs_login_create"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:text="@string/msg_login_create_account_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>