<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    tools:context=".PostProductActivity">
    <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="200dp">
          <LinearLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
              <LinearLayout
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="100dp">
                  <ImageView
                      android:id="@+id/app_image_1"
                      android:layout_weight="1"
                      android:layout_width="0dp"
                      android:layout_height="match_parent"/>
                  <ImageView
                      android:id="@+id/app_image_2"
                      android:layout_weight="1"
                      android:layout_width="0dp"
                      android:layout_height="match_parent"/>
              </LinearLayout>
              <LinearLayout
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="100dp">
                  <ImageView
                      android:id="@+id/app_image_3"
                      android:layout_weight="1"
                      android:layout_width="0dp"
                      android:layout_height="match_parent"/>
                  <ImageView
                      android:id="@+id/app_image_4"
                      android:layout_weight="1"
                      android:layout_width="0dp"
                      android:layout_height="match_parent"/>
              </LinearLayout>
          </LinearLayout>
          <ImageView
              android:scaleType="centerCrop"
              android:id="@+id/app_iv_pick_image"
              android:layout_centerInParent="true"
              android:src="@android:drawable/ic_input_add"
              android:layout_width="100dp"
              android:layout_height="100dp"/>
      </RelativeLayout>

      <TextView
          android:layout_marginTop="10dp"
          android:layout_marginBottom="10dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="5dp"
          android:text="@string/product" />

      <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:cardCornerRadius="4dp">

          <LinearLayout
              android:padding="5dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

              <com.google.android.material.textfield.TextInputLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/title">

                  <EditText
                      android:id="@+id/app_edt_product_title"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="5dp"
                      android:importantForAutofill="no"
                      android:inputType="text" />
              </com.google.android.material.textfield.TextInputLayout>

              <com.google.android.material.textfield.TextInputLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/price">

                  <EditText
                      android:id="@+id/app_edt_product_price"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="5dp"
                      android:importantForAutofill="no"
                      android:inputType="number" />
              </com.google.android.material.textfield.TextInputLayout>


              <com.google.android.material.textfield.TextInputLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/discount">

                  <EditText
                        android:id="@+id/app_edt_product_discount"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="5dp"
                      android:importantForAutofill="no"
                      android:inputType="number" />
              </com.google.android.material.textfield.TextInputLayout>
              <com.google.android.material.textfield.TextInputLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/description">

                  <EditText
                      android:id="@+id/app_edt_product_description"
                      android:overScrollMode="always"
                      android:scrollbarStyle="insideInset"
                      android:scrollbars="vertical"
                      android:gravity="top"
                      android:inputType="textMultiLine"
                      android:lines="5"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="5dp"
                      android:importantForAutofill="no" />
              </com.google.android.material.textfield.TextInputLayout>
          </LinearLayout>
      </androidx.cardview.widget.CardView>
      <TextView
          android:layout_marginTop="10dp"
          android:layout_marginBottom="10dp"
          android:padding="5dp"
          android:text="@string/category"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

      <androidx.cardview.widget.CardView

          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <LinearLayout
              android:id="@+id/app_ll_choose_category"
              android:clickable="true"
              android:focusable="true"
              android:background="?attr/selectableItemBackground"
              android:padding="10dp"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
              <com.google.android.material.chip.ChipGroup
                  android:id="@+id/app_cg_categories"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
              </com.google.android.material.chip.ChipGroup>
              <TextView
                  android:layout_marginTop="10dp"
                  android:drawableEnd="@drawable/ic_more_small"
                  android:text="@string/choose_categories"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>
          </LinearLayout>
      </androidx.cardview.widget.CardView>
      <TextView
          android:layout_marginTop="10dp"
          android:layout_marginBottom="10dp"
          android:padding="5dp"
          android:text="@string/tags"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

      <androidx.cardview.widget.CardView

          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <LinearLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
              <EditText
                  android:id="@+id/app_edt_tag"
                  android:layout_margin="5dp"
                  android:hint="@string/enter_tag"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>
              <Button
                  android:id="@+id/app_btn_post"
                  android:text="Post"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>
          </LinearLayout>
      </androidx.cardview.widget.CardView>
  </LinearLayout>

</ScrollView>